--- a/Seed/index.html
+++ b/Seed/index.html
@@ -66,7 +66,7 @@
     "@type": "WebApplication",
     "name": "Plants vs Brainrots Stock Live",
     "description": "LIVE Plants vs Brainrots Stock Tracker: Get real-time shop updates and seed & gear notifications! Check stock every 5 minutes. Join our discord for in-game advantage!",
-    "url": "https://plantsvsbrainrotsstocktracker.com",
+    "url": "https://plants-vs-brainrotss.netlify.app/seed/",
     "applicationCategory": "GameApplication",
     "operatingSystem": "Web Browser",
     "offers": {
