--- a/Seed/index.html
+++ b/Seed/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="LIVE Plants vs Brainrots Stock Tracker: Get real-time shop updates and seed & gear notifications! Check stock every 5 minutes. Join our discord for in-game advantage!" />
   <meta name="keywords" content="Plants vs Brainrots, stock tracker, seed shop, George shop, live updates, rare seeds, Mr Carrot, Cocotank, Epic seeds, Legendary seeds, Secret seeds, Roblox tracker, PvBR monitor" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://plantsvsbrainrotsstocktracker.com" />
+  <link rel="canonical" href="https://plants-vs-brainrotss.netlify.app/seed/" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   
   <!-- Favicons -->
