--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       setTimeout(() => {
-        window.location.replace("https://phantom-lifesteal.netlify.app/main");
+        window.location.replace("/main");
       }, 2000); // 2-second delay
     });
   </script>
